Add dynamic +/- scale option for Overview touch interface
